partially complete calculator function

--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ h1 {
 
 button {
     border: 1px solid #dfc87b;
+    font-size: 20px;
     /* border-radius: 30px; */
     /* width: 80px; */
     /* height: 55px; */
