--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body {
-    background: #dfc87b;
+    background: #5c63ce;
     color: white;
     height: 100%;
     width: 100%;
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 h1 {
@@ -11,38 +12,40 @@ h1 {
 }
 
 #main-container {
-    /* background-color: cornflowerblue; */
     width: 400px;
     height: 400px;
     margin: 0 auto;
     text-align: center;
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
-    /* border: 1px solid orange; */
-    /* border-end-end-radius: 20px; */
-    /* border-bottom-left-radius: 20px; */
 }
 
 button {
-    border: 1px solid #dfc87b;
+    font-family: 'Montserrat', sans-serif;
+    border: 1px solid #5c63ce;
     font-size: 20px;
-    /* border-radius: 30px; */
-    /* width: 80px; */
-    /* height: 55px; */
-    /* margin: auto; */
-    /* box-shadow: black 2px 2px 2px; */
+    border-radius: 20px;
+    margin: 10px;
+}
+
+button:active {
+    background: linear-gradient(45deg, #c24f2c, #b3aa38) ;
 }
 
 
 #input-box {
-    border: 1px solid #dfc87b;
+    font-family: 'Montserrat', sans-serif;
+    border: 1px solid #5c63ce;
+    border-radius: 25px;
     background-color: black;
     color: white;
     text-align: right;
     font-size: 16px;
     padding: 0 20px;
+    margin-bottom: 20px;
     width: 358px;
     height: 50px;
+    outline: none;
 }
 
 #form-box {
